# virtue-initiative

./: .gitignore  API.md  README.md  deploy.sh  format-all-web.sh  package-lock.json  theme.json
.github/workflows/: client-android.yml  client-ios.yml  client-linux.yml  client-macos.yml  client-windows.yml  deploy.yml  lint.yml  web.yml
api/: .dev.vars.example  .gitignore  API.md  README.md  TESTING.md  package-lock.json  package.json  refactor-notes.md  tsconfig.json  tsconfig.lint.json  vitest.config.ts  wrangler.json  wrangler.toml
api/scripts/: clean-remote.mjs
api/src/: globals.d.ts  index.ts
api/src/lib/: base-path.ts  db.ts  email-domain.ts  email.ts  encoding.ts  jwt.ts  password.ts  r2.ts  scheduler.ts  schemas.ts  tamper.ts  tokens.ts
api/src/lib/email/: templates.ts
api/src/middleware/: auth.ts  validation.ts
api/src/routes/: auth.ts  batches.ts  data.ts  device-only.ts  devices.ts  email-webhooks.ts  hash-server.ts  hashes.ts  images.ts  logs.ts  notifications.ts  partners.ts  settings.ts
api/src/schema/migrations/: 0001_schema.sql  0002_drop_device_activity_columns.sql  0003_device_states.sql  0004_device_states_batch_start.sql
api/src/types/: bindings.ts
api/test/: auth-routes.test.ts  auth.test.ts  data.test.ts  devices.test.ts  email-webhooks.test.ts  env.d.ts  helpers.ts  images.test.ts  logs.test.ts  notifications.test.ts  partners.test.ts  routing.test.ts  scheduler.test.ts  settings.test.ts  setup.ts
client/: .gitignore  Cargo.toml  version.properties
client/android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
client/android/app/: build.gradle.kts  proguard-rules.pro
client/android/rust/: Cargo.toml
client/android/rust/src/: lib.rs
client/android/scripts/: doctor.sh
client/core/: .env.dev.example  Cargo.toml  architecture.md  build.rs
client/core/src/: api.rs  api_client.rs  app_commands.rs  auth.rs  batch.rs  batch_daemon.rs  config.rs  crypto.rs  error.rs  hash_chain.rs  image_pipeline.rs  lib.rs  model.rs  models.rs  platform.rs  queue.rs  schedule.rs  service.rs  service_host.rs  storage.rs  token_store.rs  tray_icon.rs  upload.rs  version.rs
client/ios/: .gitignore  README.md  project.yml
client/ios/VirtueIOS.xcodeproj/: project.pbxproj
client/ios/app/: Info.plist  VirtueIOS.entitlements
client/ios/app/SafariWebExtension/: Info.plist  SafariWebExtensionHandler.swift
client/ios/app/Shared/: VirtueShared.swift
client/ios/app/Sources/: CaptureCallbacks.swift  MonitoringCoordinator.swift  NativeBridge.swift  VirtueIOSApp.swift
client/ios/rust/: Cargo.toml
client/ios/rust/src/: lib.rs
client/ios/scripts/: build-ios.sh  build-rust-for-xcode.sh  build-rust-xcframework.sh  generate-project.sh  run-on-device.sh
client/linux/: Cargo.toml  README.md
client/linux/packaging/debian/: postinst  prerm
client/linux/packaging/systemd/: bepure.service  virtue.service
client/linux/scripts/: build-deb.sh
client/linux/src/: api.rs  capture.rs  config.rs  daemon.rs  main.rs  tray.rs
client/mac/: Cargo.toml  README.md
client/mac/assets/: AppIcon.icns
client/mac/scripts/: build-app.sh  build-dmg.sh
client/mac/src/: api.rs  capture.rs  config.rs  daemon.rs  launch_agent.rs  main.rs  runtime_env.rs  ui.rs
client/scripts/: clear-prerelease-assets.sh  publish-prerelease.sh  update-version.sh  version.sh
client/windows/: Cargo.toml  README.md  VM_SETUP.md  build.rs
client/windows/packaging/nsis/: installer.nsi
client/windows/scripts/: Get-VersionInfo.ps1  bootstrap-win11-build-vm.ps1  build-installer.ps1  build-installer.sh  remote-windows-build.sh
client/windows/src/: api.rs  capture.rs  capture_control.rs  capture_daemon.rs  config.rs  daemon.rs  lib.rs  runtime_env.rs  service_log.rs  session.rs  win_text.rs
help/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  wrangler.jsonc
help/help/: getting-started.md  tips.md
help/help/installation/: index.md  linux.md  mac.md  windows.md
help/help/removing-access/: disable-browser.md  filtering.md  index.md  whitelisting.md
help/help/web/: index.md  inviting-a-partner.md
help/src/css/: custom.css
help/src/pages/: index.tsx
help/src/theme/ColorModeToggle/: index.tsx
images/: README.md  generate-icons.py  generate-icons.sh
landing/: .env.local  .env.production  .env.staging  .gitignore  README.md  astro.config.mjs  index.html  index.js  index.ts  package-lock.json  package.json  privacy.html  state-iframe.html  state-iframe.ts  style.css  terms.html  vite.config.ts  wrangler.json  wrangler.jsonc
landing/scripts/: fetch-release-data.mjs  prepare-release-data.mjs
landing/src/: theme.ts
landing/src/components/: Footer.astro  Header.astro  ThemeHeadScript.astro  ThemeScript.astro
landing/src/components/icons/: CheckIcon.astro  LaptopIcon.astro  MinusIcon.astro  MobileIcon.astro
landing/src/content/help/: getting-started.md  how-it-works.md  tips.md
landing/src/help/: navigation.ts
landing/src/layouts/: HelpLayout.astro  SiteLayout.astro
landing/src/lib/: app-url.ts
landing/src/pages/: download.astro  index.astro  privacy.astro  state-iframe.html.astro  terms.astro
landing/src/pages/help/: [...slug].astro  index.astro
landing/src/styles/: global.css
scripts/: check-code-references.js  deploy.sh  format-all-web.sh
shared-web/: base.css  index.css  package.json  state.ts
styles/: base.css  index.css  package.json
web/: .env.example  .env.production  .env.staging  HTTPS-DEVICE-TESTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.lint.json  vite.config.ts  wrangler.json  wrangler.jsonc
web/scripts/: install-cloudflared.sh
web/src/: api.ts  crypto.ts  globals.d.ts  index.tsx  style.css
web/src/components/: Button.tsx  Header.tsx  ThemeButton.tsx
web/src/context/: auth.tsx  e2ee.tsx
web/src/hooks/: useDarkMode.ts
web/src/lib/: e2ee-keyring.ts
web/src/pages/Auth/: index.tsx  style.css
web/src/pages/Home/: index.tsx  style.css
web/src/pages/Logs/: LogsGallery.tsx  LogsList.tsx  index.tsx  shared.tsx  (+1 more)
web/src/utils/: time.ts
(+43 files in other folders)
