[package]
name = "bepure-client-core"
version = "0.1.0"
edition = "2024"
description = "Platform-agnostic client core for BePure"

[lib]
name = "bepure_client_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
