[package]
name = "virtue-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
flate2 = "1.1"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "multipart", "rustls-tls"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
webp = "0.3"
