[package]
name = "bepure-linux-client"
version = "0.1.0"
edition = "2024"
description = "BePure Linux client"

[[bin]]
name = "bepure"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bepure-client-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
hostname = "0.4"
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[package.metadata.deb]
name = "bepure"
maintainer = "BePure <support@bepure.app>"
section = "utils"
priority = "optional"
depends = "$auto, systemd"
assets = [
  ["target/release/bepure", "usr/bin/bepure", "755"],
  ["packaging/systemd/bepure.service", "usr/lib/systemd/user/bepure.service", "644"],
  ["README.md", "usr/share/doc/bepure/README.md", "644"],
]
maintainer-scripts = "packaging/debian"
