[package]
name = "virtue-linux-client"
version = "0.1.0"
edition = "2024"
description = "Virtue Linux client"

[[bin]]
name = "virtue"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
virtue-client-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
hex = "0.4"
hostname = "0.4"
ksni = { version = "0.3.3", features = ["blocking"] }
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[package.metadata.deb]
name = "virtue"
maintainer = "Virtue Initiative <support@virtue.app>"
section = "utils"
priority = "optional"
depends = "$auto, systemd"
assets = [
  ["target/release/virtue", "usr/bin/virtue", "755"],
  ["packaging/systemd/virtue.service", "usr/lib/systemd/user/virtue.service", "644"],
  ["README.md", "usr/share/doc/virtue/README.md", "644"],
]
maintainer-scripts = "packaging/debian"
