[package]
name = "virtue-linux"
version = "0.0.1"
edition = "2024"
description = "Virtue Linux client"

[[bin]]
name = "virtue"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
ksni = { version = "0.3.3", features = ["blocking"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
virtue_core = { package = "virtue-core", path = "../core" }

[package.metadata.deb]
name = "virtue"
maintainer = "Virtue Initiative <support@virtue.app>"
section = "utils"
priority = "optional"
depends = "$auto, systemd"
assets = [
  ["target/release/virtue", "usr/bin/virtue", "755"],
  ["packaging/systemd/virtue.service", "usr/lib/systemd/user/virtue.service", "644"],
  ["README.md", "usr/share/doc/virtue/README.md", "644"],
]
maintainer-scripts = "packaging/debian"
