[package]
name = "virtue-mac-client"
version = "0.1.0"
edition = "2024"
description = "Virtue macOS tray client and daemon"

[[bin]]
name = "virtue-mac-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
virtue-client-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tray-icon = "0.21"
tao = "0.32"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
