[package]
name = "bepure-windows-client"
version = "0.1.0"
edition = "2024"
description = "BePure Windows client"

[lib]
name = "bepure_windows_client"
path = "src/lib.rs"

[[bin]]
name = "bepure-service"
path = "src/bin/bepure-service.rs"

[[bin]]
name = "bepure-tray"
path = "src/bin/bepure-tray.rs"

[dependencies]
anyhow = "1"
bepure-client-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-service = "0.8"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]
