[package]
name = "virtue-windows"
version = "0.0.1"
edition = "2024"
description = "Virtue Windows client"

[lib]
name = "virtue_windows"
path = "src/lib.rs"

[[bin]]
name = "virtue-service"
path = "src/bin/virtue-service.rs"

[[bin]]
name = "virtue-tray"
path = "src/bin/virtue-tray.rs"

[[bin]]
name = "virtue-auth-ui"
path = "src/bin/virtue-auth-ui.rs"

[dependencies]
anyhow = "1"
virtue_core = { package = "virtue-core", path = "../core" }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
hostname = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.14", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-software"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-service = "0.8"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Environment",
  "Win32_System_RemoteDesktop",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]
