[package]
name = "virtue-android-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
anyhow = "1"
virtue-client-core = { path = "../../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
jni = "0.21"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
