[package]
name = "virtue-ios-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[workspace]

[dependencies]
anyhow = "1"
virtue-client-core = { path = "../../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
