[package]
name = "virtue-ios"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[workspace]

[dependencies]
anyhow = "1"
virtue_core = { package = "virtue-core", path = "../../core" }
chrono = { version = "0.4", features = ["clock", "serde"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
